add ugly workarounds prototyping